Bug 445089 - English comment making no sense
Summary: English comment making no sense
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 5.0.0-beta1
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-11-06 17:56 UTC by Hoang Duy Tran
Modified: 2025-05-28 08:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hoang Duy Tran 2021-11-06 17:56:22 UTC
SUMMARY
During the process of translating UI, I came across this line of text:

File %1 is missing in %2 and is broken. Please try to save again in a different location.

found in the file:

libs/ui/KisImportExportFilter.cpp

if a 'FILE' which is 'MISSING', meaning it doesn't exist, and that's why you cannot locate it, then, IT CANNOT BE BROKEN, as well. Non-existence object WILL NOT have any other status attributes attaching to it.

EXPECTED RESULT

Please correct the English.

SOFTWARE/OS VERSIONS
macOS: Catalina 10.15.7 

ADDITIONAL INFORMATION
Comment 1 Bourumir Wyngs 2022-04-11 17:20:17 UTC
The code there checks if each of the list of files is present in the saved store (saved file archive). If any one is missing, this is not good and then all saved store is seen as broken:

    Q_FOREACH(const QString &file, filesToCheck) {
        if (!store->hasFile(file)) {
            return i18n("File %1 is missing in %2 and is broken. Please try to save again in a different location.", file, fileName);
        }
This probably can be translated as:

The saved bundle %1 is broken as it is missing the expected file %2. Please try to save again in a different location.
Comment 2 Bourumir Wyngs 2022-04-11 17:36:31 UTC
I have opened the merge request is https://invent.kde.org/graphics/krita/-/merge_requests/1414

The text as it stands now is "The saved archive %1 is broken as it is missing the expected file %2.  Please try to save again to another location."
I also named 'file' into 'archive' in the statement nearby. This code checks for the file presence in the saved .zip archives.
Comment 3 Bourumir Wyngs 2022-04-13 16:31:00 UTC
Due some reason not obvious for me Krita developer team rejects this single line merge request, even if I tried to tweak the phraseology.  Yielding.
Comment 4 vanyossi 2022-04-13 20:56:53 UTC
Before working on bugs please make sure the bug is CONFIRMED (or discuss it in irc with devs to see it this can to be confirmed). This report is not marked as such and any work in it will need to pass discussion, which in this case was not favorable to the changes proposed. As a personal opinion: the text could be ambiguous to translation if there is no familiarity with the user/application context, I myself see some weird translations for spanish due to this missing context. As for this particular string I would probably adjust the last bit only: "and is broken", but with no better proposal from my side I will leave it as is for the moment.
Comment 5 Bourumir Wyngs 2022-04-14 17:27:02 UTC
One of the ways to resolve this is to ask for the bug reporter to propose the error message as expected behavior. Considering the bug report currently does not define expected behavior.
Comment 6 Halla Rempt 2025-05-28 08:51:13 UTC
Git commit 5e1b73b0ef9c4fb84857004925f22b2813dabf99 by Halla Rempt.
Committed on 28/05/2025 at 08:51.
Pushed by rempt into branch 'master'.

Try to reword this message again

M  +1    -1    libs/ui/KisImportExportFilter.cpp

https://invent.kde.org/graphics/krita/-/commit/5e1b73b0ef9c4fb84857004925f22b2813dabf99